--- a/src/TradeDay.css
+++ b/src/TradeDay.css
@@ -1,6 +1,12 @@
 .trade-day {
-    background-color: papayawhip;
-    color: #000;
-    margin: 20px;
-    padding: 20px;
+    padding-left: 20px;
 }
+
+.trade-day h3 {
+    margin-bottom: 10px;
+}
+
+.trade-date {
+    color:white;
+    font-weight: normal;
+  }
