Use better data. adjust dates instead of breaking. develop styles. remove unused code...

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,7 @@ code {
     monospace;
 }
 
-.money {
-  color: green;
+.profit {
   font-weight: bold;
   border: 1px solid white;
   padding: 3px 6px;
