make config file for importing config object. reuse code. remove old junk from boilerplate. remove musings from file.

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ ul li {
 }
 
 .positive, .new {
+  color: green;
+  font-weight: bold;
+}
+
+.positive-bright, .new {
   color: lightgreen;
   font-weight: bold;
 }
