Add function to return start and end dates for all the years in dataset. Make basic scenario table. Clean up code and add tests.

--- a/src/index.css
+++ b/src/index.css
@@ -69,9 +69,10 @@ td {
   font-size: 11pt;
 }
 
-.muffins-return {
+td.muffins-return {
   background-color: rgb(235, 235, 250);
 }
+
 .table-integer {
   text-align: right;
 }
